fixed music covers h1

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,7 @@ p {
 }
 
 .about-section h1,
-.music-covers,
+.music-covers h1,
 .contact-section h1 {
   font-size: 64px;
   line-height: 85px;
